fixed website stretching issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ main {
 
 @media screen and (max-width: 1100px) {
   main {
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(4, auto);
   }
 }
 
